src/objects/OrderApi__Shipping_Region__c.object
<CustomObject>
    <description>Shipping Regions are used to define Shipping Rates, or areas that the organization Will Not Ship to.</description>
    <fields>
        <fullName>OrderApi__Address_Field_Values_CSV__c</fullName>
        <description>Comma separated address field values.</description>
        <inlineHelpText>Enter country names, separated by a comma.</inlineHelpText>
        <label>Address Field Values (CSV)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Address__c</fullName>
        <description>Address for related Shipping Region.</description>
        <inlineHelpText>Address for related Shipping Region.</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Description for related Shipping Region.</description>
        <inlineHelpText>Describe the Shipping Region.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Name__c</fullName>
        <description>Display name for the specific Shipping Region.</description>
        <inlineHelpText>Enter a display name for the Shipping Region.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The default region will match any shipping destination that is not explicitly defined in another region. Leave the Address Field Values (CSV) field blank when enabling this feature.</description>
        <inlineHelpText>The default region will match any shipping destination that is not explicitly defined in another region. Leave the Address Field Values (CSV) field blank when enabling this feature.</inlineHelpText>
        <label>Is Default Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Will_Not_Ship_Message__c</fullName>
        <description>This message is displayed in the checkout UI when the buyer enters a shipping destination that is in a Will Not Ship region.</description>
        <inlineHelpText>Enter a message that will display in the checkout screen when a customer tries to ship to a Will Not Ship region.</inlineHelpText>
        <label>Will Not Ship Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Will_Not_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that makes this a Will Not Ship region.</description>
        <inlineHelpText>Select the checkbox if this is a region the organization Will Not Ship to.</inlineHelpText>
        <label>Will Not Ship</label>
        <type>Checkbox</type>
    </fields>
    <label>Shipping Region</label>
    <nameField>
        <label>Shipping Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>